objects/Action_Information_Channel_Business_Revi__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Responsible__c</fullName>
        <formula>Action__r.ABB_Responsible__r.FirstName&amp;&quot; &quot;&amp;  Action__r.ABB_Responsible__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABB Responsible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Description__c</fullName>
        <label>Action Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Record_Type__c</fullName>
        <formula>Action__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Status_Hideen__c</fullName>
        <formula>TEXT( Action__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Status Hideen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <formula>TEXT(Action__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <referenceTo>Joint_Business_Plan_Actions__c</referenceTo>
        <relationshipLabel>Action Information Channel Business Revi</relationshipLabel>
        <relationshipName>Action_Information_Channel_Business_Revi</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Review__c</fullName>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Action Information Channel Business Revi</relationshipLabel>
        <relationshipName>Action_Information_Channel_Business_Revi</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <formula>Action__r.Deadline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Formatted__c</fullName>
        <formula>DATEVALUE(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date Formatted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Responsible__c</fullName>
        <formula>Action__r.Partner_Responsible__r.FirstName + &apos; &apos; + Action__r.Partner_Responsible__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Responsible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>(TEXT( Action__r.Priority__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <formula>Action__r.Registered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered</label>
        <type>Date</type>
    </fields>
    <label>Action Information Channel Business Revi</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Information Channel Business Revi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Information Channel Business Revi</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>